<resources>
    <string name="app_name">PracticalLoginPage</string>
    <string name="txtEmail">Email Address</string>
    <string name="btnRegister">Register</string>
    <string name="txtPassword">Password</string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="btnLogin">Login</string>
    <string name="RegText">New to our service?</string>
    <string name="title_activity_maps">Map</string>
    <string name="CarPark_prompt">Choose a Car Park</string>

    <string-array name="CarParkSpin">
        <item>MeadowBank</item>
        <item>Victoria CarPark</item>
    </string-array>
    </resources>