<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/txtPasswordConfirm"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/txtConfirmPassword"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="402dp" />

    <EditText
        android:id="@+id/txtPasswordNew"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="287dp" />

    <EditText
        android:id="@+id/txtEmailNew"
        android:layout_width="148dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/btnRegisterAccount"
        android:layout_width="170dp"
        android:layout_height="98dp"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="509dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="339dp"
        android:layout_height="170dp"
        app:srcCompat="@drawable/parkinglogo"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/txtF_Name"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="First Name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="205dp" />

    <EditText
        android:id="@+id/txtS_Name"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Second Name"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="276dp" />

    <EditText
        android:id="@+id/txtREG_NUM"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Registration Num"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="248dp" />

    <EditText
        android:id="@+id/txtPRE_CARPARK"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Preferred CarPark"
        tools:layout_editor_absoluteX="251dp"
        tools:layout_editor_absoluteY="407dp" />

</androidx.constraintlayout.widget.ConstraintLayout>